Several spacing fixes to about me

--- a/resources/css/components/statistics.css
+++ b/resources/css/components/statistics.css
@@ -19,16 +19,22 @@
 .statistics__item {
     display: flex;
     flex-direction: column;
-    gap: 15px;
-    width: calc( 50% - 15px );
+    gap: 10px;
+    /* width: calc( 50% - 15px ); */
+    width: fit-content;
 }
 
 .statistics__item:nth-child(1) {
     border-right: 1px solid var(--c-gray-100);
+    padding-right: 75px;
+}
+
+[data-theme="dark"] .statistics__item:nth-child(1) {
+    border-right: 1px solid var(--c-bg-dark);
 }
 
 .statistics__item:nth-child(2) {
-    padding-left: 30px;
+    padding-left: 75px;
 }
 
 .statistics__item__header,
@@ -44,6 +50,11 @@
 
 .statistics__item__body {
     opacity: 0.7;
+    font-size: 0.95rem;
+}
+
+[data-theme="dark"] .statistics__item__body {
+    opacity: 0.5;
 }
 
 @media screen and (max-width: 450px) {
